version/0.16/_sources/api/ansys/dpf/core/operators/mesh/wireframe/InputsWireframe.rst.txt






:class:`InputsWireframe`
========================


.. py:class:: ansys.dpf.core.operators.mesh.wireframe.InputsWireframe(op: ansys.dpf.core.dpf_operator.Operator)

   Bases: :py:obj:`ansys.dpf.core.inputs._Inputs`


   Intermediate class used to connect user inputs to
   wireframe operator.

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.mesh.wireframe()
   >>> my_mesh = dpf.MeshedRegion()
   >>> op.inputs.mesh.connect(my_mesh)
   >>> my_threshold = float()
   >>> op.inputs.threshold.connect(my_threshold)
   >>> my_element_restriction = dpf.Scoping()
   >>> op.inputs.element_restriction.connect(my_element_restriction)






.. py:currentmodule:: InputsWireframe

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~connect`
            - Connect any input (an entity or an operator output) to any input pin of this operator.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~mesh`
            - Allows to connect mesh input to the operator.
          * - :py:attr:`~threshold`
            - Allows to connect threshold input to the operator.
          * - :py:attr:`~element_restriction`
            - Allows to connect element_restriction input to the operator.




   .. tab-item:: Special methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~__str__`
            - 
          * - :py:attr:`~__call__`
            - 
          * - :py:attr:`~__getitem__`
            - 




Import detail
-------------

.. code-block:: python

    from ansys.dpf.core.operators.mesh.wireframe import InputsWireframe

Property detail
---------------

.. py:property:: mesh
   :type: ansys.dpf.core.inputs.Input[ansys.dpf.core.meshed_region.MeshedRegion]


   Allows to connect mesh input to the operator.

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.mesh.wireframe()
   >>> op.inputs.mesh.connect(my_mesh)
   >>> # or
   >>> op.inputs.mesh(my_mesh)

.. py:property:: threshold
   :type: ansys.dpf.core.inputs.Input[float]


   Allows to connect threshold input to the operator.

   angle threshold in radian that will trigger an edge detection.

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.mesh.wireframe()
   >>> op.inputs.threshold.connect(my_threshold)
   >>> # or
   >>> op.inputs.threshold(my_threshold)

.. py:property:: element_restriction
   :type: ansys.dpf.core.inputs.Input[ansys.dpf.core.scoping.Scoping]


   Allows to connect element_restriction input to the operator.

   Restrict the list of elements that must be treated when extractiong edges. Can be used to exclude unwanted bodies or unwanted elements like contact or surface load elements.

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.mesh.wireframe()
   >>> op.inputs.element_restriction.connect(my_element_restriction)
   >>> # or
   >>> op.inputs.element_restriction(my_element_restriction)




Method detail
-------------

.. py:method:: __str__()

.. py:method:: connect(inpt)

   Connect any input (an entity or an operator output) to any input pin of this operator.

   Searches for the input type corresponding to the output.

   .. deprecated::
       Deprecated in favor of explicit output-to-input connections.


.. py:method:: __call__(inpt)

.. py:method:: __getitem__(item) -> Input




